--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -65,7 +65,7 @@ platform.active=Oracle_Java_TM__Platform_Micro_Edition_SDK_8_0
 platform.apis=CONFIGURATION-1.0,DEVICE-IO-1.0,JSR75-FileConnection-1.0,GCF-1.8,HTTPCLIENT-1.0,JSON-1.0,SATSA-CRYPTO-1.0,JSR172-1.0,JSR179-1.0,MEEP-EVENTS-1.0,MEEP-IO-1.0,MEEP-POWER-MANAGEMENT-1.0,MEEP-RMS-1.0,MEEP-SWM-1.0,OAUTH2-1.0,JSR280-1.0
 platform.bootcp=${platform.home}/lib/cldc_1.8.jar:${platform.home}/lib/meep_8.0.jar:${platform.home}/lib/configuration_1.0.jar:${platform.home}/lib/device-io_1.0.jar:${platform.home}/lib/jsr75_1.0-fc.jar:${platform.home}/lib/gcf_1.8.jar:${platform.home}/lib/httpclient_1.0.jar:${platform.home}/lib/json_1.0.jar:${platform.home}/lib/jsr177_1.0-crypto.jar:${platform.home}/lib/jsr172_1.0.jar:${platform.home}/lib/jsr179_1.0.jar:${platform.home}/lib/meep_8.0-event.jar:${platform.home}/lib/meep_8.0-io.jar:${platform.home}/lib/meep_8.0-power.jar:${platform.home}/lib/meep_8.0-rms.jar:${platform.home}/lib/meep_8.0-swm.jar:${platform.home}/lib/oauth2_1.0.jar:${platform.home}/lib/jsr280_1.0.jar
 platform.configuration=CLDC-1.8
-platform.device=EmbeddedDevice1
+platform.device=EmbeddedExternalDevice1
 platform.profile=MEEP-8.0
 platform.sdk=default_platform
 platform.type=UEI-1.0.1
