Set MIT License

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -69,6 +69,7 @@ platform.device=EmbeddedExternalDevice1
 platform.profile=MEEP-8.0
 platform.sdk=default_platform
 platform.type=UEI-1.0.1
+project.license=mit
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
