--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -55,7 +55,7 @@ manifest.apipermissions.classes=MIDlet-Permission-1: jdk.dio.DeviceMgmtPermissio
 manifest.is.liblet=false
 manifest.jad=
 manifest.manifest=
-manifest.midlets=MIDlet-1: JRobotPI,,com.jcruz.jrobotpi.JRobotPI\n
+manifest.midlets=MIDlet-2: WebServer,,com.jcruz.jrobotpi.WebServer\nMIDlet-1: JRobotPI,,com.jcruz.jrobotpi.JRobotPI\n
 manifest.others=MIDlet-Vendor: Jose Cruz\nMIDlet-Version: 2.0.0\nMIDlet-Name: JRobotPI\n
 manifest.pushregistry=
 meta.inf.dir=${src.dir}/META-INF
