--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -16,7 +16,7 @@ debug.classpath=\
     ${run.classpath}
 debugger.timeout=30000
 deployment.jarurl=JRobotPI.jar
-deployment.override.jarurl=false
+deployment.override.jarurl=true
 # Files in build.classes.dir which should be excluded from distribution jar
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
