New option to destroy app, stop threads and close all devices

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -16,7 +16,7 @@ debug.classpath=\
     ${run.classpath}
 debugger.timeout=30000
 deployment.jarurl=JRobotPI.jar
-deployment.override.jarurl=true
+deployment.override.jarurl=false
 # Files in build.classes.dir which should be excluded from distribution jar
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
@@ -31,10 +31,9 @@ includes=**
 jar.compress=false
 javac.classpath=
 # Space-separated list of extra javac options
-javac.compilerargs=-Xlint:deprecation
-javac.deprecation=true
+javac.compilerargs=
+javac.deprecation=false
 javac.processorpath=\
-    ${platform.home}/lib/compiler/me_plugin.jar:\
     ${javac.classpath}
 javac.source=1.8
 javac.target=1.8
@@ -52,11 +51,10 @@ javadoc.version=true
 javadoc.windowtitle=
 manifest.apipermissions=
 manifest.apipermissions.classes=MIDlet-Permission-1: jdk.dio.DeviceMgmtPermission "*:*" "open"\nMIDlet-Permission-2: jdk.dio.i2cbus.I2CPermission "*:*" "open"\nMIDlet-Permission-3: jdk.dio.gpio.GPIOPinPermission "*:*" "open"\nMIDlet-Permission-4: jdk.dio.gpio.GPIOPortPermission "*:*" "open"\nMIDlet-Permission-5: jdk.dio.gpio.GPIOPinPermission "*:*" "setdirection"\nMIDlet-Permission-6: jdk.dio.uart.UARTPermission "*" "open"\nMIDlet-Permission-7: javax.microedition.io.HttpsProtocolPermission "https://*:*"\nMIDlet-Permission-8: javax.microedition.io.HttpProtocolPermission "http://*:*"\nMIDlet-Permission-9: java.util.logging.LoggingPermission "control" null\nMIDlet-Permission-10: javax.microedition.io.SocketProtocolPermission "socket://:*"\nMIDlet-Permission-11: javax.microedition.midlet.AutoStartPermission\n
-manifest.is.liblet=false
 manifest.jad=
 manifest.manifest=
 manifest.midlets=MIDlet-1: JRobotPI,,com.jcruz.jrobotpi.JRobotPI\n
-manifest.others=MIDlet-Vendor: Jose Cruz\nMIDlet-Version: 2.0.0\nMIDlet-Name: JRobotPI\n
+manifest.others=MIDlet-Vendor: Jose Cruz\nMIDlet-Version: 2.0.3\nMIDlet-Name: JRobotPI\n
 manifest.pushregistry=
 meta.inf.dir=${src.dir}/META-INF
 no.dependencies=false
