Flame sensor fixes. Logger fixes.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -53,7 +53,7 @@ manifest.apipermissions=
 manifest.apipermissions.classes=MIDlet-Permission-1: jdk.dio.DeviceMgmtPermission "*:*" "open"\nMIDlet-Permission-2: jdk.dio.i2cbus.I2CPermission "*:*" "open"\nMIDlet-Permission-3: jdk.dio.gpio.GPIOPinPermission "*:*" "open"\nMIDlet-Permission-4: jdk.dio.gpio.GPIOPortPermission "*:*" "open"\nMIDlet-Permission-5: jdk.dio.gpio.GPIOPinPermission "*:*" "setdirection"\nMIDlet-Permission-6: jdk.dio.uart.UARTPermission "*" "open"\nMIDlet-Permission-7: javax.microedition.io.HttpsProtocolPermission "https://*:*"\nMIDlet-Permission-8: javax.microedition.io.HttpProtocolPermission "http://*:*"\nMIDlet-Permission-9: java.util.logging.LoggingPermission "control" null\nMIDlet-Permission-10: javax.microedition.io.SocketProtocolPermission "socket://:*"\nMIDlet-Permission-11: javax.microedition.midlet.AutoStartPermission\n
 manifest.jad=
 manifest.manifest=
-manifest.midlets=MIDlet-2: TestGPSEM406,,com.jcruz.jrobotpi.test.TestGPSEM406\nMIDlet-1: JRobotPI,,com.jcruz.jrobotpi.JRobotPI\n
+manifest.midlets=MIDlet-1: JRobotPI,,com.jcruz.jrobotpi.JRobotPI\n
 manifest.others=MIDlet-Vendor: Jose Cruz\nMIDlet-Version: 2.0.3\nMIDlet-Name: JRobotPI\n
 manifest.pushregistry=
 meta.inf.dir=${src.dir}/META-INF
